ncurses-6.3/menu/menu.h

  typedef int Menu_Options;
  extern MENU_EXPORT(Menu_Options) menu_opts(const MENU *);
  extern MENU_EXPORT(WINDOW *) menu_sub(const MENU *);
  extern MENU_EXPORT(WINDOW *) menu_win(const MENU *);
  extern MENU_EXPORT(const char *) menu_mark(const MENU *);
  extern MENU_EXPORT(chtype) menu_back(const MENU *);
  extern MENU_EXPORT(chtype) menu_fore(const MENU *);
  extern MENU_EXPORT(chtype) menu_grey(const MENU *);
  extern MENU_EXPORT(int) menu_opts_off(MENU *, Menu_Options);
  extern MENU_EXPORT(int) menu_opts_on(MENU *, Menu_Options);
  extern MENU_EXPORT(int) menu_pad(const MENU *);
  extern MENU_EXPORT(int) pos_menu_cursor(const MENU *);
  extern MENU_EXPORT(int) scale_menu(const MENU *, int *, int *);
  extern MENU_EXPORT(int) set_menu_back(MENU *, chtype);
  extern MENU_EXPORT(int) set_menu_fore(MENU *, chtype);
  extern MENU_EXPORT(int) set_menu_grey(MENU *, chtype);
  extern MENU_EXPORT(int) set_menu_mark(MENU *, const char *);
  extern MENU_EXPORT(int) set_menu_opts(MENU *, Menu_Options);
  extern MENU_EXPORT(int) set_menu_pad(MENU *, int);
  extern MENU_EXPORT(int) set_menu_pattern(MENU *, const char *);
  extern MENU_EXPORT(int) set_menu_sub(MENU *, WINDOW *);
  extern MENU_EXPORT(int) set_menu_win(MENU *, WINDOW *);
  extern MENU_EXPORT(int) set_menu_spacing(MENU *, int, int, int);
  extern MENU_EXPORT(int) menu_spacing(const MENU *, int *, int *, int *);